# binaryif-spec

./: BINARYIF-MASTER.md  Dockerfile  README.md  ROADMAP.md  artifacts.md  canonicalization.md  infrastructure.md  requirements.txt  threat-model.md
binaryif/: README.md  pyproject.toml
binaryif/analysis/: PHASE_1_7_ANALYSIS.py
binaryif/binaryif/: __init__.py  cae.py  canonicalization.py  cli.py  evaluator.py  gates.py  gates_us_regulatory.py  hashing.py  interceptor.py  ruleset.py  rulesets_us.py  signing.py  verifier.py
binaryif/examples/: wire_transfer_example.py
binaryif/tests/: test_adversarial_attacks.py  test_conformance.py  test_interceptor.py  test_us_regulatory_gates.py
binaryif_mvp_enterprise_plus_ext5/: Makefile  README.md  docker-compose.yml
binaryif_mvp_enterprise_plus_ext5/app/: artifacts.py  config.py  db.py  gates.py  insurer_api.py  keys.py  log_backends.py  logging_config.py  main.py  models.py  policy_adapter.py  rate_limit.py  receipt.py  security.py  util.py
binaryif_mvp_enterprise_plus_ext5/artifacts/: permit.json
binaryif_mvp_enterprise_plus_ext5/binaryif-spec-complete (1)/: CHARTER.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  ROADMAP.md
binaryif_mvp_enterprise_plus_ext5/certification/: REGISTRY_FORMAT.md
binaryif_mvp_enterprise_plus_ext5/conformance/: CONFORMANCE_SPEC.md
binaryif_mvp_enterprise_plus_ext5/data/: binaryif.db
binaryif_mvp_enterprise_plus_ext5/enterprise/: COMPLIANCE_CHECKLIST.md
binaryif_mvp_enterprise_plus_ext5/evidence/: payee_allowlist_snapshot.json
binaryif_mvp_enterprise_plus_ext5/fixtures/: action.json  action_bad_dest.json  action_low.json  evidence.json
binaryif_mvp_enterprise_plus_ext5/insurer/: DEMO_SCRIPT.md  INSURER_BRIEF.md
binaryif_mvp_enterprise_plus_ext5/rules/: wire_ruleset.json
binaryif_mvp_enterprise_plus_ext5/secrets/: binaryif_signing_key.json  cfo_signing_key.json
binaryif_mvp_enterprise_plus_ext5/security/: SECURITY_CONTROLS.md  THREAT_MODEL.md  (+1 more)
conformance/: CHARTER.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  infrastructure.md  proof-sketch.md
profiles/: finance.md  healthcare.md
rfcs/: RFC-0001-binaryif-core.md
specs/: artifacts.md  canonicalization.md  gate-dsl.md  verification.md
(+24 files in other folders)
